--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,17 @@ h1 {
                 </ul>
               </li>
 
+              <li> Buckner A. S. M., Khorrami Z., González M., Lumsden S. L., Clark P., Moraux E., 2021, A&A
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021arXiv211111805B/abstract">‘The Spatial Evolution of Young Massive Clusters III. Effect of the Gaia Filter on 2D Spatial Distribution Studies’</a> </li>
+                </ul>
+              </li>
+
+              <li> Blaylock-Squibbs G. A., Parker R. J., Buckner A. S. M., Güdel M., 2022, MNRAS, 510, 2864
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.tmp.3123B/abstract">‘Investigating the structure of star-forming regions using INDICATE’</a> </li>
+                </ul>
+              </li>
 
               <li> Liow K. Y., Rieder S., Dobbs C. L., Jaffa S. E., 2022, MNRAS, 510, 2657
                 <ul style="list-style-type:none">
@@ -69,9 +80,33 @@ h1 {
                 </ul>
               </li>
 
+              <li> Khorrami Z., Langlois M., Clark P. C., Vakili F., Buckner A. S. M., Gonzalez M., Crowther P., Wünsch R., Palouš J., Lumsden S., Moraux E., 2021, MNRAS, 503, 292
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.503..292K/abstract">‘High-contrast and resolution near-infrared photometry of the core of R136’</a> </li>
+                </ul>
+              </li>
+
+              <li> Khorrami Z., Langlois M., Vakili F., Clark P. C., Buckner A. S. M., Gonzalez M., Crowther P., Wünsch R., Palouš J., Boccaletti A., Lumsden S., Moraux E., 2021, A&A, 649, L8
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021A%26A...649L...8K/abstract">‘Extreme adaptive optics astrometry of R136. Searching for high proper motion stars’</a> </li>
+                </ul>
+              </li>
+
               <li> Dobbs C. L., Wurster J., 2021, MNRAS, 502, 2285
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.502.2285D/abstract">‘The properties of clusters, and the orientation of magnetic fields relative to filaments, in magnetohydrodynamic simulations of colliding clouds’</a> </li>
+                </ul>
+              </li>
+
+              <li> González M., Joncour I., Buckner A. S. M., Khorrami Z., Moraux E., Lumsden S. L., Clark P., Oudmaijer R. D., Blanco J. M., de la Calle I., Herrera-Fernandez J. M., Salgado J. J., Valero-Martín L., Torres Z., Hacar Á., Ulla A., 2021, A&A, 647, A14
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021A%26A...647A..14G/abstract">‘S2D2: Small-scale Significant substructure DBSCAN Detection. I. NESTs detection in 2D star-forming regions’</a> </li>
+                </ul>
+              </li>
+
+              <li> Nony T., Robitaille J. -F., Motte F., Gonzalez M., Joncour I., Moraux E., Men'shchikov A., Didelon P., Louvet F., Buckner A. S. M., Schneider N., Lumsden S. L., Bontemps S., Pouteau Y., Cunningham N., Fiorellino E., Oudmaijer R., André P., Thomasson B., 2021, A&A, 645, A94
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021A%26A...645A..94N/abstract">‘Mass segregation and sequential star formation in NGC 2264 revealed by Herschel’</a> </li>
                 </ul>
               </li>
 
