--- a/publications.html
+++ b/publications.html
@@ -42,8 +42,9 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2><span>Publications</h2>
-            <ul>
 
+            <b><dt>Recently accepted for publication</dt></b>
+            <ul>
               <li> Ali A. A., Bending T. J. R., Dobbs C. L., 2022, MNRAS
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220104141A/abstract">‘Stellar winds and photoionization in a spiral arm’</a> </li>
@@ -55,7 +56,11 @@ h1 {
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021arXiv211111805B/abstract">‘The Spatial Evolution of Young Massive Clusters III. Effect of the Gaia Filter on 2D Spatial Distribution Studies’</a> </li>
                 </ul>
               </li>
+            </ul>
+            <br>
 
+            <b><dt>2022</dt></b>
+            <ul>
               <li> Blaylock-Squibbs G. A., Parker R. J., Buckner A. S. M., Güdel M., 2022, MNRAS, 510, 2864
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.tmp.3123B/abstract">‘Investigating the structure of star-forming regions using INDICATE’</a> </li>
@@ -79,7 +84,11 @@ h1 {
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.509..954D/abstract">‘The formation of massive stellar clusters in converging galactic flows with photoionization’</a> </li>
                 </ul>
               </li>
+            </ul>
+            <br>
 
+            <b><dt>2021</dt></b>
+            <ul>
               <li> Khorrami Z., Langlois M., Clark P. C., Vakili F., Buckner A. S. M., Gonzalez M., Crowther P., Wünsch R., Palouš J., Lumsden S., Moraux E., 2021, MNRAS, 503, 292
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.503..292K/abstract">‘High-contrast and resolution near-infrared photometry of the core of R136’</a> </li>
@@ -115,7 +124,11 @@ h1 {
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501.4136A/abstract">‘The growth of H II regions around massive stars: the role of metallicity and dust’</a> </li>
                 </ul>
               </li>
+            </ul>
+            <br>
 
+            <b><dt>2020</dt></b>
+            <ul>
               <li> Liow K. Y., Dobbs C. L., 2020, MNRAS, 499, 1099
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200907857L/abstract">‘The role of collision speed, cloud density, and turbulence in the formation of young massive clusters via cloud-cloud collisions’</a> </li>
@@ -146,6 +159,7 @@ h1 {
                 </ul>
               </li>
             </ul>
+            <br>
         </div>
       </div>
       <div class="sidebar">
