added pubs buy ahmad and clare

--- a/publications.html
+++ b/publications.html
@@ -84,11 +84,24 @@ h1 {
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.509..954D/abstract">‘The formation of massive stellar clusters in converging galactic flows with photoionization’</a> </li>
                 </ul>
               </li>
+
+              <li> Wienen M., Brunt C. M., Dobbs C. L., Colombo D., 2022, MNRAS, 509, 68
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.509...68W/abstract">‘Perseus arm - a new perspective on star formation and spiral structure in our home galaxy’</a> </li>
+                </ul>
+              </li>
+
             </ul>
             <br>
 
             <b><dt>2021</dt></b>
             <ul>
+              <li> McLeod A. F., Ali A. A., Chevance M., Della Bruna L., Schruba A., Stevance H., Adamo A., Kruijssen J. M. D., Longmore S. N., Weisz D. R., Zeidler P., 2021, MNRAS, 508, 5425
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.508.5425M/abstract">‘The impact of pre-supernova feedback and its dependence on environment’</a> </li>
+                </ul>
+              </li>
+
               <li> Khorrami Z., Langlois M., Clark P. C., Vakili F., Buckner A. S. M., Gonzalez M., Crowther P., Wünsch R., Palouš J., Lumsden S., Moraux E., 2021, MNRAS, 503, 292
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.503..292K/abstract">‘High-contrast and resolution near-infrared photometry of the core of R136’</a> </li>
@@ -124,6 +137,19 @@ h1 {
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.501.4136A/abstract">‘The growth of H II regions around massive stars: the role of metallicity and dust’</a> </li>
                 </ul>
               </li>
+
+              <li> Schuller F., Urquhart J. S., Csengeri T., Colombo D., Duarte-Cabral A., Mattern M., Ginsburg A., Pettitt A. R., Wyrowski F., Anderson L., Azagra F., Barnes P., Beltran M., Beuther H., Billington S., Bronfman L., Cesaroni R., Dobbs C., Eden, D., Lee M. -Y., et al., 2021, MNRAS, 500, 3064
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.500.3064S/abstract">‘The SEDIGISM survey: First Data Release and overview of the Galactic structure’</a> </li>
+                </ul>
+              </li>
+
+              <li> Duarte-Cabral A., Colombo D., Urquhart J. S., Ginsburg A., Russeil D., Schuller F., Anderson L. D., Barnes P. J., Beltrán M. T., Beuther H., Bontemps S., Bronfman L., Csengeri T., Dobbs C. L., Eden D., Giannetti A., Kauffmann J., Mattern M., Medina S. -N. X., Menten K. M., et al., 2021, MNRAS, 500, 3027
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.500.3027D/abstract">‘The SEDIGISM survey: molecular clouds in the inner Galaxy’</a> </li>
+                </ul>
+              </li>
+
             </ul>
             <br>
 
@@ -132,6 +158,12 @@ h1 {
               <li> Liow K. Y., Dobbs C. L., 2020, MNRAS, 499, 1099
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2020arXiv200907857L/abstract">‘The role of collision speed, cloud density, and turbulence in the formation of young massive clusters via cloud-cloud collisions’</a> </li>
+                </ul>
+              </li>
+
+              <li> Pettitt A. R., Dobbs C. L., Baba J., Colombo D., Duarte-Cabral A., Egusa F., Habe A., 2020, MNRAS, 498, 1159
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.498.1159P/abstract">‘How do different spiral arm models impact the ISM and GMC population?’</a> </li>
                 </ul>
               </li>
 
