--- a/profiles/liow.html
+++ b/profiles/liow.html
@@ -49,7 +49,7 @@ h1 {
             </style>
             <div>I am a third year PhD student at the University of Exeter. My project is to understand the formation of young massive clusters (YMCs) through numerical simulations. Currently, I'm looking at YMCs formation via cloud-cloud collisions.</div>
             <br>
-            <p>More in <a href="https://kyliow.github.io/" target="_blank"> https://kyliow.github.io</a></p>
+            <p>More on <a href="https://kyliow.github.io/" target="_blank"> https://kyliow.github.io</a></p>
             <p>Follow me <a href="https://www.twitter.com/astro_kyliow" target="_blank"> @astro_kyliow</a></p>
         </div>
       </div>
