--- a/publications.html
+++ b/publications.html
@@ -45,22 +45,57 @@ h1 {
 
             <b><dt>Recently accepted for publication</dt></b>
             <ul>
-              <li> Ali A. A., Bending T. J. R., Dobbs C. L., 2022, MNRAS
+
+              <li> Buckner A. S. M., Liow K. Y., Dobbs C. L., Naylor T., Rieder S., 2022, MNRAS
                 <ul style="list-style-type:none">
-                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220104141A/abstract">‘Stellar winds and photoionization in a spiral arm’</a> </li>
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220503305B/abstract">‘Observational Bias and Young Massive Cluster Characterisation I. 2D Perspective Effects’</a> </li>
                 </ul>
               </li>
 
-              <li> Buckner A. S. M., Khorrami Z., González M., Lumsden S. L., Clark P., Moraux E., 2021, A&A
+              <li> Neralwar K. R., Colombo D., Duarte-Cabral A., Urquhart J. S., Mattern M., Wyrowski F., Menten K. M., Barnes P., Sanchez-Monge A., Rigby A. J., Mazumdar P., Eden D., Csengeri T., Dobbs C. L., Veena V. S., Neupane S., Henning T., Schuller F., Leurini S., Wienen M., et al., 2022, A&A
                 <ul style="list-style-type:none">
-                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2021arXiv211111805B/abstract">‘The Spatial Evolution of Young Massive Clusters III. Effect of the Gaia Filter on 2D Spatial Distribution Studies’</a> </li>
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220502253N/abstract">‘The SEDIGISM survey: Molecular cloud morphology. II. Integrated source properties’</a> </li>
                 </ul>
               </li>
+
+
+              <li> Bending T. J. R., Dobbs C. L., Bate M. R., 2022, MNRAS
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220412171B/abstract">‘Supernovae and photoionizing feedback in spiral arm molecular clouds’</a> </li>
+                </ul>
+              </li>
+
+              <li> Neralwar K. R., Colombo D., Duarte-Cabral A., Urquhart J. S., Mattern M., Wyrowski F., Menten K. M., Barnes P., Sanchez-Monge A., Beuther H., Rigby A. J., Mazumdar P., Eden D., Csengeri T., Dobbs C. L., Veena V. S., Neupane S., Henning T., Schuller F., Leurini S., et al., 2022, A&A
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022arXiv220302504N/abstract">‘The SEDIGISM survey: Molecular cloud morphology. I. Classification and star formation’</a> </li>
+                </ul>
+              </li>
+
             </ul>
             <br>
 
             <b><dt>2022</dt></b>
             <ul>
+
+              <li> Qiao L., Haworth T. J., Sellek A. D., Ali A. A., 2022, MNRAS, 512, 3788
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.512.3788Q/abstract">‘The evolution of protoplanetary discs in star formation and feedback simulations’</a> </li>
+                </ul>
+              </li>
+
+
+              <li> Ali A. A., Bending T. J. R., Dobbs C. L., 2022, MNRAS, 510, 5592
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022MNRAS.510.5592A/abstract">‘Stellar winds and photoionization in a spiral arm’</a> </li>
+                </ul>
+              </li>
+
+              <li> Buckner A. S. M., Khorrami Z., González M., Lumsden S. L., Clark P., Moraux E., 2021, A&A, 659, A72
+                <ul style="list-style-type:none">
+                  <li> <a href="https://ui.adsabs.harvard.edu/abs/2022A%26A...659A..72B/abstract">‘The Spatial Evolution of Young Massive Clusters III. Effect of the Gaia Filter on 2D Spatial Distribution Studies’</a> </li>
+                </ul>
+              </li>
+
               <li> Blaylock-Squibbs G. A., Parker R. J., Buckner A. S. M., Güdel M., 2022, MNRAS, 510, 2864
                 <ul style="list-style-type:none">
                   <li> <a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.tmp.3123B/abstract">‘Investigating the structure of star-forming regions using INDICATE’</a> </li>
