--- a/movies.html
+++ b/movies.html
@@ -42,6 +42,16 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2><span>Movies</h2>
+            
+            <h3>Cloud-cloud collision </h3> 
+            <a href="https://youtu.be/pAiTqhIInhw" target="_blank">
+              <img src="/images/colliding_clouds.png" alt="Cloud-cloud collision movie">
+            </a>
+            <iframe width="420" height="315"
+              src="https://www.youtube.com/embed/pAiTqhIInhw">
+            </iframe>
+            <p>The movie shows the collision of two giant molecular clouds with relative speed of 25 km/s and the formation of young massive clusters at 1 Myr (Liow and Dobbs 2020). </p> 
+
         </div>
       </div>
       <div class="sidebar">
