--- a/people.html
+++ b/people.html
@@ -50,7 +50,7 @@ h1 {
         <br>
           <b><dt>Postdocs</dt></b>
             <ul>
-              <dd><li><a href="/profiles/ali.html">Ahmad Ali</a></li>
+              <dd><li><a href="https://a-a-ali.github.io/">Ahmad Ali</a></li>
               <dd><li><a href="/profiles/buckner.html">Anne Buckner</a></li>
               <dd><li> Tom Bending</li>
             </ul>
