added twitter contact info

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,10 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2>Contact Us</h2>
+          <li> Tweet Us!
+                  <li> <a href="https://mobile.twitter.com/icybob_project">‘@ICYBOB_Project’</a> </li>
+                </ul>
+              </li>
             <style>
               img {
                     display: block;
