--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2>Contact Us</h2>
-          <li> Tweet Us!
+          <div> Tweet Us!</div>
                   <li> <a href="https://mobile.twitter.com/icybob_project">‘@ICYBOB_Project’</a> </li>
                 </ul>
               </li>
