--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@ h1 {
       <div class="mainbar">
         <div class="article">
           <h2>Contact Us</h2>
-          <div> Tweet Us! <href="https://mobile.twitter.com/icybob_project">‘@ICYBOB_Project’</div>
+          <div> Tweet Us: <href="https://mobile.twitter.com/icybob_project">@ICYBOB_Project</div>
                 </ul>
               </li>
             <style>
