--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@ h1 {
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
           <li class="active"><a href="contact.html">Contact Us</a></li>
 
         </ul>
@@ -91,6 +92,7 @@ h1 {
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
         <li class="active"><a href="contact.html">Contact Us</a></li>
 
       </ul>
