added faqs to menu

--- a/research.html
+++ b/research.html
@@ -25,6 +25,7 @@ h1 {
           <li class="active"><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <div class="clr"></div>
@@ -102,6 +103,7 @@ h1 {
         <li class="active"><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
       <div class="clr"></div>
