--- a/movies.html
+++ b/movies.html
@@ -25,6 +25,7 @@ h1 {
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li class="active"><a href="movies.html">Movies</a></li>
+          <li><a href="faqs.html">FAQs</a></li>
           <li><a href="contact.html">Contact Us</a></li>
 
         </ul>
@@ -73,6 +74,7 @@ h1 {
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li class="active"><a href="movies.html">Movies</a></li>
+        <li><a href="faqs.html">FAQs</a></li>
         <li><a href="contact.html">Contact Us</a></li>
       </ul>
       <div class="clr"></div>
