--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,8 @@ h1 {
         <div class="article">
           <h2>Contact Us</h2>
           <div> Tweet Us: </div> <a href="https://mobile.twitter.com/icybob_project">@ICYBOB_Project</a>
-          
+          <div>
+            <div>
           
 
           <div>Alternatively, fill out this form:</div>
