--- a/faqs.html
+++ b/faqs.html
@@ -43,7 +43,14 @@ h1 {
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2>FAQs</h2>
+          <h2><span>FAQs</h2>
+
+            <h2>About the Project<h2>
+            <ul>
+
+              <b><div>What does ICYBOB stand for?</div></b>
+              <div>Initial Conditions for YMCs and OB associations</div>
+              
                 </ul>
               </li>
             <style>
