--- a/faqs.html
+++ b/faqs.html
@@ -26,8 +26,8 @@ h1 {
           <li><a href="research.html">Research</a></li>
           <li><a href="publications.html">Publications</a></li>
           <li><a href="movies.html">Movies</a></li>
-          <li><a href="faqs.html">FAQs</a></li>
-          <li class="active"><a href="contact.html">Contact Us</a></li>
+          <li class="active"><a href="faqs.html">FAQs</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
 
         </ul>
         <div class="clr"></div>
@@ -98,8 +98,8 @@ h1 {
         <li><a href="research.html">Research</a></li>
         <li><a href="publications.html">Publications</a></li>
         <li><a href="movies.html">Movies</a></li>
-        <li><a href="faqs.html">FAQs</a></li>
-        <li class="active"><a href="contact.html">Contact Us</a></li>
+        <li class="active"><a href="faqs.html">FAQs</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
 
       </ul>
       <div class="clr"></div>
