--- a/faqs.html
+++ b/faqs.html
@@ -45,9 +45,11 @@ h1 {
         <div class="article">
           <h2><span>FAQs</h2>
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-            <h4>About the Project</h4>
+            <h3>About the Project</h3>
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-              <br>
+              <br>     
+              <br>  
+              <br>  
                 <b><div>What does ICYBOB stand for?</div></b>
                 <div>Initial Conditions for YMCs and OB associations</div>
               <br>
@@ -84,8 +86,55 @@ h1 {
               <br>
                 <b><div>How can I contact you?</div></b>
                 <div>Our contact info is listed on the Contact Us page.</div>
-              <br>
+              <br>     
+              <br>  
+              <br>  
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+            <h3>The Science</h3>
+            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+            <br>     
+            <br>  
+            <br>  
+              <b><div>What is a star cluster?</div></b>
+              <div>A group of stars in space gravitationally bound together. There are 2 main types of clusters: Open
+              Clusters which are part of the star formation process of our galaxy, and Globular clusters which are
+              not.</div>
+            <br>
+              <div>At ICYBOB we are trying to better understand how Young Massive open Clusters (YMCs) and OB
+              associations form and evolve.</div>
+            <br>
+              <b><div>What makes a cluster “young”?</div></b>
+              <div>The definition of a ‘young’ cluster is a subjective term, and is normally based on the context in which
+              the research is taking place. Here at ICYBOB we focus of clusters which are less than 5Myrs old.</div>
+            <br>           
+              <b><div>What makes a cluster “massive”?</div></b>
+              <div>A cluster is considered massive if the total mass of the member stars is greater than 10^4 times that
+              of our Sun.</div>
+            <br>
+              <b><div>What is an OB association?</div></b>
+              <div>An association is a group similar to an open cluster but with fewer stars, that have become
+              gravitationally unbound. OB associations are young (<10Myrs) and have some of the most massive
+              stars (O and B type) in our Galaxy as members.</div>
+            <br>                                                      
+              <b><div>How do YMCs and OB associations form?</div></b>
+              <div>Both are formed within Giant Molecular Clouds (GMCs), and there are several mechanisms that can
+              trigger star formation. Here at ICYBOB we research the formation of YMCs and OB associations
+              triggered by two GMCs colliding (a.k.a ‘cloud-cloud collision’).</div>
+            <br>
+              <b><div>What are “properties” of YMCs and OB associations?</div></b>
+              <div>Spatial and kinematic characteristics such as how old they are, distance from Earth, how reddened
+              they appear to be (due to the presence of dust in the GMC and in the Galaxy between us and them),
+              the spatial distribution of members, the dynamics of members etc.</div>
+            <br>
+              <b><div>What is stellar feedback?</div></b>
+              <div>The release of mass, energy and momentum by massive (O and B type) stars.</div>
+            <br>     
+            <br>  
+            <br>      
+            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+            <h3>The Science</h3>
+            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~        
+            
               </li>
             <style>
               img {
