--- a/faqs.html
+++ b/faqs.html
@@ -49,7 +49,6 @@ h1 {
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
               <br>     
               <br>  
-              <br>  
                 <b><div>What does ICYBOB stand for?</div></b>
                 <div>Initial Conditions for YMCs and OB associations</div>
               <br>
@@ -88,12 +87,10 @@ h1 {
                 <div>Our contact info is listed on the Contact Us page.</div>
               <br>     
               <br>  
-              <br>  
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
             <h3>The Science</h3>
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
             <br>     
-            <br>  
             <br>  
               <b><div>What is a star cluster?</div></b>
               <div>A group of stars in space gravitationally bound together. There are 2 main types of clusters: Open
@@ -129,12 +126,20 @@ h1 {
               <b><div>What is stellar feedback?</div></b>
               <div>The release of mass, energy and momentum by massive (O and B type) stars.</div>
             <br>     
-            <br>  
-            <br>      
+            <br>    
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-            <h3>The Science</h3>
-            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~        
-            
+            <h3>Career</h3>
+            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
+            <br>     
+            <br>   
+              <b><div>What qualifications are needed to work on a project like ICYBOB?</div></b>
+              <div>To become a astrophysics researcher, a PhD in astrophysics is required (though you can work on a
+              project like ICYBOB for your PhD).</div>
+            <br>
+              <b><div>I’m currently in high school and interested in becoming an astrophysicist... where do I start?</div></b>
+              <div>Maths and Physics are essential courses to take to become an astrophysicist, and will be needed for
+              entry onto any accredited physics-based University degree. Computing and astronomy courses are
+              beneficial to take, if your school offers these.</div>
               </li>
             <style>
               img {
