--- a/faqs.html
+++ b/faqs.html
@@ -105,7 +105,7 @@ h1 {
               the research is taking place. Here at ICYBOB we focus of clusters which are less than 5Myrs old.</div>
             <br>           
               <b><div>What makes a cluster “massive”?</div></b>
-              <div>A cluster is considered massive if the total mass of the member stars is greater than 10^4 times that
+              <div>A cluster is considered massive if the total mass of the member stars is greater than 10<sup>4</sup> times that
               of our Sun.</div>
             <br>
               <b><div>What is an OB association?</div></b>
