--- a/faqs.html
+++ b/faqs.html
@@ -74,17 +74,17 @@ h1 {
                 <div>University of Exeter</div>
               <br>
                 <b><div>Are your results published?</div></b>
-                <div>Yes – these are listed on our Publications page</div>
+                <div>Yes – these are listed on our <a href="https://icybob.co.uk/publications.html">Publications</a> page</div>
               <br>
                 <b><div>Where can I read about your results?</div></b>
                 <div>Links to the articles are given on the Publications page. In addition, we have created movies from our
-                cluster simulations which can be viewed on our Movies page.</div>
+                cluster simulations which can be viewed on our <a href="https://icybob.co.uk/movies.html">Movies</a> page.</div>
               <br>
                 <b><div>Do you give talks to the general public/schools?</div></b>
                 <div>Yes – please contact us for more information or to arrange a talk.</div>
               <br>
                 <b><div>How can I contact you?</div></b>
-                <div>Our contact info is listed on the Contact Us page.</div>
+                <div>Our contact info is listed on the <a href="https://icybob.co.uk/contact.html">Contact Us</a> page.</div>
               <br>     
               <br>  
             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
