--- a/movies.html
+++ b/movies.html
@@ -53,12 +53,20 @@ h1 {
               <br> 
               <br> 
               <h3>Spiral Arms </h3> 
+             <div class="video-layout">
+            <div class="video">
+            <div id="vid-left">
             <iframe width="420" height="315"
               src="https://www.youtube.com/embed/TjqM5hXw7tM">
             </iframe>
+                </div>
+<div id="vid-right">
             <iframe width="420" height="315"
               src="https://www.youtube.com/embed/eXNZKWNznnQ">
             </iframe>
+    </div>
+</div>
+</div>
             <p>These movies show the column density (top) and ionisation (bottom) for a region along a spiral arm which is forming massive star clusters. The movie shows a timescale of 1.6 Myr, and the length scale of around 60 pc (Dobbs et al. 2022). </p> 
 
               <br> 
