--- a/movies.html
+++ b/movies.html
@@ -52,7 +52,7 @@ h1 {
 
               <br> 
               <br> 
-              <h3>Spiral Arms </h3> 
+              <h3>Clusters in Spiral Arms </h3> 
              <div class="video-layout">
             <div class="video">
             <div id="vid-left">
@@ -67,7 +67,7 @@ h1 {
     </div>
 </div>
 </div>
-            <p>These movies show the column density (top) and ionisation (bottom) for a region along a spiral arm which is forming massive star clusters. The movie shows a timescale of 1.6 Myr, and the length scale of around 60 pc (Dobbs et al. 2022). </p> 
+            <p>These movies show the column density (top) and ionisation (bottom) for a region along a spiral arm which is forming massive star clusters. The movie shows a timescale of 1.6 Myr, and the length scale is around 60 pc (Dobbs et al. 2022). </p> 
 
               <br> 
               <br> 
@@ -77,7 +77,7 @@ h1 {
              <iframe width="420" height="315"
               src="https://www.youtube.com/embed/CuFTmb10pgo">
             </iframe>
-            <p>Two simulations of a region along a spiral arm are shown with different gas densities. The movies show the formation of star clusters, and feedback in the form of photoionisation and supernovae is included. The higher gas density simulation (top) forms clusters up to masses of around 10^5 solar masses. The lower gas density simulation (bottom) forms several groups of stars which are unbound, and are similar in mass (combined mass around 10^4 solar masses) and size to the Orion OB association (Dobbs et al., submitted). </p> 
+            <p>Two simulations of a region along a spiral arm are shown with different gas densities. The movies show the formation of star clusters, and feedback in the form of photoionisation and supernovae is included. The higher gas density simulation (top) forms clusters up to masses of around 10<sup>5</sup> solar masses. The lower gas density simulation (bottom) forms several groups of stars which are unbound, and are similar in mass (combined mass around 10<sup>4</sup> solar masses) and size to the Orion OB association (Dobbs et al., submitted). </p> 
 
               
               
