--- a/movies.html
+++ b/movies.html
@@ -56,13 +56,11 @@ h1 {
              <div class="video-layout">
             <div class="video">
             <div id="vid-left">
-            <iframe width="420" height="315"
-              src="https://www.youtube.com/embed/TjqM5hXw7tM">
+            <iframe src="https://www.youtube.com/embed/TjqM5hXw7tM">
             </iframe>
                 </div>
 <div id="vid-right">
-            <iframe width="420" height="315"
-              src="https://www.youtube.com/embed/eXNZKWNznnQ">
+            <iframe src="https://www.youtube.com/embed/eXNZKWNznnQ">
             </iframe>
     </div>
 </div>
@@ -71,11 +69,9 @@ h1 {
 
               <br> 
               <br> 
-            <iframe width="420" height="315"
-              src="https://www.youtube.com/embed/KJkJq5CVrAA">
+            <iframe src="https://www.youtube.com/embed/KJkJq5CVrAA">
             </iframe>
-             <iframe width="420" height="315"
-              src="https://www.youtube.com/embed/CuFTmb10pgo">
+             <iframe src="https://www.youtube.com/embed/CuFTmb10pgo">
             </iframe>
             <p>Two simulations of a region along a spiral arm are shown with different gas densities. The movies show the formation of star clusters, and feedback in the form of photoionisation and supernovae is included. The higher gas density simulation (top) forms clusters up to masses of around 10<sup>5</sup> solar masses. The lower gas density simulation (bottom) forms several groups of stars which are unbound, and are similar in mass (combined mass around 10<sup>4</sup> solar masses) and size to the Orion OB association (Dobbs et al., submitted). </p> 
 
