--- a/movies.html
+++ b/movies.html
@@ -56,12 +56,10 @@ h1 {
              <div class="video-layout">
             <div class="video">
             <div id="vid-left">
-            <iframe src="https://www.youtube.com/embed/TjqM5hXw7tM">
-            </iframe>
+            <iframe src="https://www.youtube.com/embed/TjqM5hXw7tM" frameborder="0" allowfullscreen></iframe>
                 </div>
 <div id="vid-right">
-            <iframe src="https://www.youtube.com/embed/eXNZKWNznnQ">
-            </iframe>
+            <iframe src="https://www.youtube.com/embed/eXNZKWNznnQ" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 </div>
